# Renju

./: CMakeLists.txt
include/core/: board.h  constans.h  game.h  stone.h
include/player/: human.h
include/solver/: ips.h
include/utils/: render.h
src/: main.cpp
src/core/: board.cpp  game.cpp  stone.cpp
src/player/: human.cpp
src/solver/: ips.cpp
src/utils/: render.cpp
